here it is baby

--- a/odoo.conf
+++ b/odoo.conf
@@ -1,5 +1,5 @@
 [options]
-addons_path = c:\users\david\onedrive\desktop\odoo 17\server\odoo\addons
+addons_path = C:\Users\David\OneDrive\Desktop\Odoo 17\server\addons, C:\Users\David\OneDrive\Desktop\Odoo 17\server\custom_addons
 admin_passwd = $pbkdf2-sha512$600000$n9P6v5cyRsjZ.5/TOidEyA$tyu9Tu8zKO403V9xAXFTsHkyQH79R8qdYL81bUbB.R8bBDU/dqM..KFZS1YIzmPl1awacZ/l1Uv7eY1Dof.EBg
 bin_path = C:\Users\David\OneDrive\Desktop\Odoo 17\thirdparty
 csv_internal_sep = ,
